# fast_api_example

./: .env  .gitignore  Makefile  README.md  main.py  populate.py  pyproject.toml  schemas.py  service.py  settings.py
database/: connection.py  init_db.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 0f823eb5e29a_create_books_model.py
models/: books.py  student.py
templates/: root.html
tests/: test_main.py
