[tool.poetry]
name = "fast_api_example"
version = "0.1.0"
description = ""
authors = ["pauloestrellalabs <paulo.netto@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.33"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
ipython = "^8.2.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
asyncpg = "^0.25.0"
Jinja2 = "^3.1.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"
psycopg2 = "^2.9.3"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
